# rust-postgres

./: Cargo.toml
.github/workflows/: ci.yml
postgres-protocol/src/: lib.rs
postgres-protocol/src/message/: backend.rs
postgres-protocol/src/replication/: mod.rs  pgoutput.rs  raw.rs
postgres-replication/: Cargo.toml
postgres-replication/src/: lib.rs  protocol.rs
postgres-replication/tests/: replication.rs
postgres-types/src/: chrono_04.rs  pg_lsn.rs
postgres/src/: config.rs
tokio-postgres/: Cargo.toml
tokio-postgres/src/: client.rs  config.rs  connect.rs  connect_raw.rs  copy_both.rs  copy_in.rs  copy_out.rs  lib.rs  replication.rs  replication_client.rs  simple_query.rs
tokio-postgres/src/error/: mod.rs
tokio-postgres/tests/test/: copy_both.rs  main.rs  replication.rs
tokio-postgres/tests/test/types/: chrono_04.rs
